feat:构建配置元数据/idea支持配置提示